fix: potential fix for safari whitespace bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,28 @@
     scroll-behavior: smooth!important;
   }
 
+  html, body {
+    height: 100%;
+    width: 100%;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+  }
+
+  #wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 0;
+    margin: 0;
+    overflow: auto;
+    box-sizing: border-box;
+  }
+
   @layer base {
     :root {
       --background: 0 0% 100%;
